# ROS-Graduation-Project

./: Simulation Videos.docx
Graduation CADs/OneDrive-2019-11-22/: bodyCorrected.stl
gp_abstract_sim/: CMakeLists.txt  important commands.txt  package.xml
gp_abstract_sim/launch/: rviz.launch  spawn_robot.launch  spawn_sdf.launch  spawn_sdf_new.launch  spawn_urdf.launch  start_testworld.launch
gp_abstract_sim/meshes/: bodyCorrected.dae  bodyCorrected.stl.dae  bodyCorrected.stp
gp_abstract_sim/models/Final_Assembly2/: CMakeLists.txt  model.config  package.xml
gp_abstract_sim/models/Final_Assembly2/config/: joint_names_Final Assembly2.URDF.yaml
gp_abstract_sim/models/Final_Assembly2/launch/: display.launch  gazebo.launch
gp_abstract_sim/models/Final_Assembly2/meshes/: Inner Case.STL  Inner Gears.STL  Left Wheel.STL  Outer Case.STL  Right Wheel.STL
gp_abstract_sim/models/Final_Assembly2/urdf/: FinalAssembly2.csv  FinalAssembly2.urdf
gp_abstract_sim/models/GPabstractV2/: crazy.urdf  hamada.urdf.xacro  hamada18.urdf  hamada19.urdf  hamada_new.urdf  model.sdf  model.urdf  model_old.config  model_old.sdf
gp_abstract_sim/models_new/: hamada_new.urddf  model.sdf
gp_abstract_sim/models_new18/: hamada19.urdf  model.sdf
gp_abstract_sim/sdf/ditto10/: hamada_new.urdf  model.config  model.sdf
gp_abstract_sim/src/: ContactPlugin.cc  ContactPlugin.hh  my_publisher.cpp  my_speed_controller_plugin.cpp  set_speed_joint_plugin.cpp
simple_keys/: CMakeLists.txt  package.xml
simple_keys/src/: readStringAndCut.cpp  readwrite_keys.cpp  service_cl.cpp  (+1 more)
(+2 files in other folders)
